# logsense

./: .gitignore  README.md  pyproject.toml
logsense/: __init__.py  alerts.py  anomaly.py  cli.py  clustering.py  constants.py  parser.py
tests/: test_alerts.py  test_anomaly.py  test_clustering.py  test_parser.py
