[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logsense"
version = "0.1.0"
description = "Terminal-native log intelligence — parses any log format, clusters error patterns, detects anomalies, and fires Slack alerts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["logs", "anomaly-detection", "cli", "devops", "monitoring"]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
logsense = "logsense.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["logsense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
